--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.NotificationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="notification" />
+    <Button
+        android:id="@+id/btn_SignOut1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign out"
+        tools:layout_editor_absoluteX="133dp"
+        tools:layout_editor_absoluteY="77dp" />
 
 </FrameLayout>
